[package]
name = "transaction_processor"
version = "0.1.0"
authors = ["GGabi <gabrielroels@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
csv = "1.1.6"
tokio = "1.16.1"
num = "0.4.0"
bigdecimal = "0.3.0"